# chess-opening-analyser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  chess_com_hook  chess_com_hook.py  eco_db_handling.py  graph_handling.py  openings_graph.py  openings_node.py  openings_tree.py  openings_tree_builder.py  pyproject.toml  requirements.txt  stockfish_hook.py  visualiser.py
.github/workflows/: pre-commit.yml
app/: app_helpers.py  streamlit_app.py
chess_opening_analyser/engine/: stockfish.py
chess_opening_analyser/games/: __init__.py  chess_com.py  processor.py
chess_opening_analyser/opening_directory/: __init__.py
chess_opening_analyser/openings/: opening.py  transformers.py  tree.py
chess_opening_analyser/visualiser/: visualiser.py
cli/: analyse_openings.py
eco/: openings.json
next_move/: opening.py
next_move/engine/: stockfish.py
next_move/games/: __init__.py  chess_com.py  processor.py
next_move/opening_directory/: __init__.py
next_move/openings/: opening.py  transformers.py  tree.py
next_move/visualiser/: visualiser.py
streamlit/: analyse.py
tests/: test_opening.py  test_stockfish.py
tests/engine/: test_stockfish.py
tests/games/: data_loader.py  test_chess_com.py  test_processor.py
tests/opening_directory/: test_opening_directory.py
tests/openings/: test_opening.py  test_transformers.py  test_tree.py
