[tool.poetry]
name = "nextmove"
version = "0.1.0"
description = ""
authors = ["Matyas Juhasz <juhaszmp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
tqdm = "^4.65.0"
requests = "^2.31.0"
chess = "^1.9.4"
networkx = "^3.1"
pydantic = "^2.1.1"
black = "^23.7.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
