[tool.poetry]
name = "chess-opening-analyser"
version = "0.1.0"
description = ""
authors = ["Matyas Juhasz <juhaszmp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
tqdm = "^4.65.0"
requests = "^2.31.0"
chess = "^1.9.4"
networkx = "^3.1"
pydantic = "^2.1.1"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
loguru = "^0.7.0"
plotly = "^5.18.0"
pre-commit = "^3.6.2"
pyright = "^1.1.351"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
streamlit = "^1.31.1"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
